--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-asgiref==3.4.1
-backports.zoneinfo==0.2.1
-Django==4.0.1
-sqlparse==0.4.2
-tzdata==2021.5
+click==8.1.3
+colorama==0.4.4
+Flask==2.1.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Werkzeug==2.1.2
