--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.2.1
 email-validator==1.2.1
 Flask==2.1.2
 flask-mongoengine==1.0.0
+Flask-PyMongo==2.3.0
 Flask-WTF==1.0.1
 gunicorn==20.1.0
 idna==3.3
