--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,21 @@ colorama==0.4.4
 dnspython==2.2.1
 email-validator==1.2.1
 Flask==2.1.2
+Flask-Admin==1.6.0
 flask-mongoengine==1.0.0
 Flask-PyMongo==2.3.0
 Flask-WTF==1.0.1
+greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mongoengine==0.24.1
+passlib==1.7.4
 pymongo==4.1.1
 requests==2.27.1
+SQLAlchemy==1.4.36
 urllib3==1.26.9
 Werkzeug==2.1.2
 WTForms==3.0.1
