--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.9.1
 certifi==2022.5.18
 charset-normalizer==2.0.12
 click==8.1.3
@@ -6,6 +7,7 @@ dnspython==2.2.1
 email-validator==1.2.1
 Flask==2.1.2
 Flask-Admin==1.6.0
+Flask-APScheduler==1.12.3
 flask-mongoengine==1.0.0
 Flask-PyMongo==2.3.0
 Flask-WTF==1.0.1
@@ -18,8 +20,14 @@ MarkupSafe==2.1.1
 mongoengine==0.24.1
 passlib==1.7.4
 pymongo==4.1.1
+python-dateutil==2.8.2
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
+six==1.16.0
 SQLAlchemy==1.4.36
+tzdata==2022.1
+tzlocal==4.2
 urllib3==1.26.9
 Werkzeug==2.1.2
 WTForms==3.0.1
